# geno

./: Cargo.toml
.devcontainer/: comfy  devcontainer.json  docker-compose-comfy.yml  docker-compose-ollama.yml  docker-compose.yml  ollama
src/: main.rs
